# fog_detection_c

./: CMakeLists.txt  README.md  config.json  example-app.cpp  main.cpp  test_pytorch.cc
include/: VENet.h  fcnet_process.h  get_darkchanel.h  get_slice.h  get_tensor.h  imgCapture.h  imgPreprocess.h  my_common.h  readConfig.h  taskQueue.h  testModule.h  testServer.h  writeDatabase.h  write_database.h
script/: createDarkchanel.cc  createSplitimage.cc
src/: fcnet_process.cc  get_darkchanel.cc  get_slice.cc  get_tensor.cc  write_database.cc
src/VENet/: VENet.cpp  VENet.h  get_tensor.cc  get_tensor.h
src/common/: my_common.cpp  my_common.h
src/imgCapture/: imgCapture.cpp  testServer.cpp
src/imgPreprocess/: get_darkchanel.cc  get_darkchanel.h  get_slice.cc  get_slice.h  imgPreprocess.cpp  imgPreprocess.h
src/readConfig/: readConfig.cpp
src/taskQueue/: taskQueue.cpp  taskQueue.h
src/testModule/: testModule.cpp
src/writeDatabase/: writeDatabase.cpp  writeDatabase.h
